--- a/package.json
+++ b/package.json
@@ -8,7 +8,11 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@turf/bbox": "^6.0.1",
     "core-js": "^3.6.4",
+    "d3-fetch": "^1.1.2",
+    "mapbox-gl": "^1.8.1",
+    "topojson-client": "^3.1.0",
     "vue": "^2.6.11"
   },
   "devDependencies": {
